Assets/Plugins/Tools/StanleyScript/Stanley script/Grammars/Stanley script grammar/gen/HereticalSolutions/StanleyScript/StanleyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/Lorem ipsum/Repositories/Unity/VOLMI/Shaken realm/Assets/Plugins/Tools/StanleyScript/Stanley script/Grammars/Stanley script grammar/StanleyParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace HereticalSolutions.StanleyScript {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class StanleyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		HAD_BEEN_GREATER=1, HAD_BEEN_LESS=2, HAD_BEEN_AT_LEAST=3, HAD_BEEN_AT_MOST=4, 
		BECAME_GREATER=5, BECAME_LESS=6, BECAME_AT_LEAST=7, BECAME_AT_MOST=8, 
		THIS_WAS_REPEATED=9, THIS_IS_HOW=10, WAS_GREATER=11, WAS_LESS=12, WAS_AT_LEAST=13, 
		WAS_AT_MOST=14, IT_WAS_EXPECTED=15, AS_LONG_AS=16, WAS_INSERTED=17, WAS_COMBINED=18, 
		WAS_COUNTED=19, WAS_CLEARED=20, WAS_REMOVED=21, WAS_LOADED=22, WAS_ADDED=23, 
		WAS_NOT=24, HAS_HAPPENED=25, HAD_INSERTED=26, HAD_COMBINED=27, HAD_COUNTED=28, 
		HAD_CLEARED=29, HAD_REMOVED=30, HAD_ADDED=31, HAD_BEEN=32, FOR_EACH=33, 
		THERE_WAS=34, OTHERWISE_IF=35, ELSE_IF=36, BECAME_EMPTY=37, AT_POSITION=38, 
		TYPE_PROGRAM=39, TYPE_REAL_NUMBER=40, TYPE_NUMBER=41, TYPE_OBJECT=42, 
		TYPE_ACTION=43, TYPE_EVENT=44, TYPE_LIST=45, TYPE_TEXT=46, TYPE_FACT=47, 
		MILLISECONDS=48, SECONDS=49, MINUTES=50, TIMES=51, TIME=52, FIRST=53, 
		LAST=54, PROGRAM=55, VALUE=56, COUNT=57, THIS=58, OTHERWISE=59, EXECUTED=60, 
		INSERTED=61, HAPPENED=62, HANDLED=63, COUNTED=64, CLEARED=65, REMOVED=66, 
		PASSED=67, CALLED=68, BECAME=69, ADDED=70, WHILE=71, ELSE=72, BEEN=73, 
		ONCE=74, DONE=75, END=76, UNTIL=77, THAT=78, AND=79, FOR=80, IF=81, WITH=82, 
		INTO=83, FROM=84, TO=85, OF=86, IN=87, ON=88, AT=89, BY=90, THE=91, AN=92, 
		A=93, WAS=94, HAD=95, HAS=96, POSSESSIVE=97, APOSTROPHE=98, COLON=99, 
		COMMA=100, LPAREN=101, RPAREN=102, LBRACKET=103, RBRACKET=104, GREATER_THAN_OR_EQUAL=105, 
		LESS_THAN_OR_EQUAL=106, NOT_EQUAL=107, GREATER_THAN=108, LESS_THAN=109, 
		EQUAL=110, PLUS=111, MINUS=112, MULTIPLY=113, DIVIDE=114, POWER=115, MOD=116, 
		REAL_NUMBER=117, NUMBER=118, STRING=119, BOOLEAN=120, VERB=121, IDENTIFIER=122, 
		DOT=123, COMMENT=124, WS=125;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_declarationStatement = 2, RULE_actionStatement = 3, 
		RULE_assignmentStatement = 4, RULE_eventHandlerStatement = 5, RULE_delegateHandlerStatement = 6, 
		RULE_assertStatement = 7, RULE_timeStatement = 8, RULE_eventStatement = 9, 
		RULE_loopStatement = 10, RULE_listOperationStatement = 11, RULE_programStatement = 12, 
		RULE_conditionalStatement = 13, RULE_subject = 14, RULE_elseIfClause = 15, 
		RULE_elseClause = 16, RULE_actionArguments = 17, RULE_argumentList = 18, 
		RULE_expression = 19, RULE_condition = 20, RULE_timeExpression = 21, RULE_subjectReference = 22, 
		RULE_listValue = 23, RULE_article = 24, RULE_preposition = 25, RULE_timeUnit = 26, 
		RULE_operation = 27, RULE_comparison = 28, RULE_typeName = 29;
	public static readonly string[] ruleNames = {
		"program", "statement", "declarationStatement", "actionStatement", "assignmentStatement", 
		"eventHandlerStatement", "delegateHandlerStatement", "assertStatement", 
		"timeStatement", "eventStatement", "loopStatement", "listOperationStatement", 
		"programStatement", "conditionalStatement", "subject", "elseIfClause", 
		"elseClause", "actionArguments", "argumentList", "expression", "condition", 
		"timeExpression", "subjectReference", "listValue", "article", "preposition", 
		"timeUnit", "operation", "comparison", "typeName"
	};

	private static readonly string[] _LiteralNames = {
		null, "'had been greater than'", "'had been less than'", "'had been at least'", 
		"'had been at most'", "'became greater than'", "'became less than'", "'became at least'", 
		"'became at most'", "'This was repeated'", "'This is how'", "'was greater than'", 
		"'was less than'", "'was at least'", "'was at most'", "'It was expected'", 
		"'As long as'", "'was inserted'", "'was combined'", "'was counted'", "'was cleared'", 
		"'was removed'", "'was loaded'", "'was added'", "'was not'", "'has happened'", 
		"'had inserted'", "'had combined'", "'had counted'", "'had cleared'", 
		"'had removed'", "'had added'", "'had been'", "'For each'", "'There was'", 
		"'Otherwise if'", "'Else if'", "'became empty'", "'at position'", "'program'", 
		"'real number'", "'number'", "'object'", "'action'", "'event'", "'list'", 
		"'text'", "'fact'", "'milliseconds'", "'seconds'", "'minutes'", "'times'", 
		"'Time'", null, null, "'Program'", null, "'count'", "'this'", "'Otherwise'", 
		"'executed'", "'inserted'", "'happened'", "'handled'", "'counted'", "'cleared'", 
		"'removed'", "'passed'", "'called'", "'became'", "'added'", "'While'", 
		"'Else'", "'been'", "'Once'", "'done'", "'End'", "'until'", "'that'", 
		"'and'", "'for'", "'If'", "'with'", "'into'", "'from'", "'to'", "'of'", 
		"'in'", "'on'", "'at'", "'by'", null, "'an'", "'a'", "'was'", "'had'", 
		"'has'", "''s'", "'''", "':'", "','", "'('", "')'", "'['", "']'", "'>='", 
		"'<='", "'!='", "'>'", "'<'", "'=='", "'+'", "'-'", "'*'", "'/'", "'^'", 
		"'%'", null, null, null, null, null, null, "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "HAD_BEEN_GREATER", "HAD_BEEN_LESS", "HAD_BEEN_AT_LEAST", "HAD_BEEN_AT_MOST", 
		"BECAME_GREATER", "BECAME_LESS", "BECAME_AT_LEAST", "BECAME_AT_MOST", 
		"THIS_WAS_REPEATED", "THIS_IS_HOW", "WAS_GREATER", "WAS_LESS", "WAS_AT_LEAST", 
		"WAS_AT_MOST", "IT_WAS_EXPECTED", "AS_LONG_AS", "WAS_INSERTED", "WAS_COMBINED", 
		"WAS_COUNTED", "WAS_CLEARED", "WAS_REMOVED", "WAS_LOADED", "WAS_ADDED", 
		"WAS_NOT", "HAS_HAPPENED", "HAD_INSERTED", "HAD_COMBINED", "HAD_COUNTED", 
		"HAD_CLEARED", "HAD_REMOVED", "HAD_ADDED", "HAD_BEEN", "FOR_EACH", "THERE_WAS", 
		"OTHERWISE_IF", "ELSE_IF", "BECAME_EMPTY", "AT_POSITION", "TYPE_PROGRAM", 
		"TYPE_REAL_NUMBER", "TYPE_NUMBER", "TYPE_OBJECT", "TYPE_ACTION", "TYPE_EVENT", 
		"TYPE_LIST", "TYPE_TEXT", "TYPE_FACT", "MILLISECONDS", "SECONDS", "MINUTES", 
		"TIMES", "TIME", "FIRST", "LAST", "PROGRAM", "VALUE", "COUNT", "THIS", 
		"OTHERWISE", "EXECUTED", "INSERTED", "HAPPENED", "HANDLED", "COUNTED", 
		"CLEARED", "REMOVED", "PASSED", "CALLED", "BECAME", "ADDED", "WHILE", 
		"ELSE", "BEEN", "ONCE", "DONE", "END", "UNTIL", "THAT", "AND", "FOR", 
		"IF", "WITH", "INTO", "FROM", "TO", "OF", "IN", "ON", "AT", "BY", "THE", 
		"AN", "A", "WAS", "HAD", "HAS", "POSSESSIVE", "APOSTROPHE", "COLON", "COMMA", 
		"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", 
		"NOT_EQUAL", "GREATER_THAN", "LESS_THAN", "EQUAL", "PLUS", "MINUS", "MULTIPLY", 
		"DIVIDE", "POWER", "MOD", "REAL_NUMBER", "NUMBER", "STRING", "BOOLEAN", 
		"VERB", "IDENTIFIER", "DOT", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StanleyParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static StanleyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StanleyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StanleyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 139611614218388992L) != 0) || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 1407374884470913L) != 0)) {
				{
				{
				State = 60;
				statement();
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationStatementContext declarationStatement() {
			return GetRuleContext<DeclarationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionStatementContext actionStatement() {
			return GetRuleContext<ActionStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentStatementContext assignmentStatement() {
			return GetRuleContext<AssignmentStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventHandlerStatementContext eventHandlerStatement() {
			return GetRuleContext<EventHandlerStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DelegateHandlerStatementContext delegateHandlerStatement() {
			return GetRuleContext<DelegateHandlerStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssertStatementContext assertStatement() {
			return GetRuleContext<AssertStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TimeStatementContext timeStatement() {
			return GetRuleContext<TimeStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventStatementContext eventStatement() {
			return GetRuleContext<EventStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LoopStatementContext loopStatement() {
			return GetRuleContext<LoopStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListOperationStatementContext listOperationStatement() {
			return GetRuleContext<ListOperationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProgramStatementContext programStatement() {
			return GetRuleContext<ProgramStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConditionalStatementContext conditionalStatement() {
			return GetRuleContext<ConditionalStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(StanleyParser.COMMENT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 66;
				declarationStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 67;
				actionStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 68;
				assignmentStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 69;
				eventHandlerStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 70;
				delegateHandlerStatement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 71;
				assertStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 72;
				timeStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 73;
				eventStatement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 74;
				loopStatement();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 75;
				listOperationStatement();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 76;
				programStatement();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 77;
				conditionalStatement();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 78;
				Match(COMMENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THERE_WAS() { return GetToken(StanleyParser.THERE_WAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubjectReferenceContext subjectReference() {
			return GetRuleContext<SubjectReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(StanleyParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArticleContext article() {
			return GetRuleContext<ArticleContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CALLED() { return GetToken(StanleyParser.CALLED, 0); }
		public DeclarationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarationStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.EnterDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.ExitDeclarationStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationStatementContext declarationStatement() {
		DeclarationStatementContext _localctx = new DeclarationStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_declarationStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(THERE_WAS);
			State = 83;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 91)) & ~0x3f) == 0 && ((1L << (_la - 91)) & 7L) != 0)) {
				{
				State = 82;
				article();
				}
			}

			State = 85;
			typeName();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==CALLED) {
				{
				State = 86;
				Match(CALLED);
				}
			}

			State = 89;
			subjectReference();
			State = 90;
			Match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SubjectReferenceContext subjectReference() {
			return GetRuleContext<SubjectReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WAS() { return GetToken(StanleyParser.WAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXECUTED() { return GetToken(StanleyParser.EXECUTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(StanleyParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ActionArgumentsContext actionArguments() {
			return GetRuleContext<ActionArgumentsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HAS() { return GetToken(StanleyParser.HAS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VERB() { return GetToken(StanleyParser.VERB, 0); }
		public ActionStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.EnterActionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IStanleyParserListener typedListener = listener as IStanleyParserListener;
			if (typedListener != null) typedListener.ExitActionStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStanleyParserVisitor<TResult> typedVisitor = visitor as IStanleyParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitActionStatement(this);
			else return visitor.VisitChildren(this);
		}
	}
